# cmake-ninja-test-project

./: CMakeLists.txt  README.md  create_sublibs.sh
